--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=springbootproject
+spring.datasource.url=jdbc:mysql://localhost:3306/local-database
+spring.datasource.username=root
+spring.datasource.password=Roopa@369
