--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,6 @@
 	<groupId>com.example</groupId>
 	<artifactId>springbootproject</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
 	<name>springbootproject</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
@@ -45,6 +44,6 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>spring-boot-application</finalName>
 	</build>
-
 </project>
